cedar-lean/UnitTest/parser_tests/negative/unclosed_paren_expr.cedar
permit(principal, action, resource) when { (1 + 2 };
